2003-11-10 Jean-Pierre Roux
      *FIX : gdcmHeader::LoadElements is now based 
             on the ListTag listElem member, 
             not longer on the TagElValueHT tagHt member
      *ENH : PrintPubElVal shows (temporarily) both results,
             with the tagHt member and the listElem member.
	     (it's easier to 'see' the problems when using Printheader)
	     
      *FIX : old private member LgrElem is now splitted into
             ReadLength   : Length actually found on disk (updated only
	                    if bug fixing is necessary), for internal
			    use only
	     UsableLength : Updated by FixFoundLength, to fix a bug
	                    or to allow Parser going on.
	     Will allow to re-write a kosher header when a SeQuence
	     with a length (not 0000) is found
      Warning : gdcmFile::Write still uses the TagHt (not ListElem)     
	        because gdcmElValSet::Add does not update ListElem
		(to be written)

2003-11-07 Jean-Pierre Roux
     *FIX misstyping in Transfert Syntax name table
     *ENH gdcmHeader::FixFoundLength now allow to 'go inside' tge SeQuences
          when they have an actual length (not 0000 nor FFFFF)
	  (Nobody should care of it, but DICOMDIR explorers)

2003-11-06  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     *ENH: vtkgdcmViewer now works with LUT dicom (OT-PAL-face ...)

2003-11-05  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
     *ENH: vtkGdcmReader now supports LUT ! 
          (vtkgdcmViewer for now is not able to use them though)
           
2003-11-05 Jean-Pierre Roux
     * in testSuite.py : new files names for checking the package
     * Fix : Forgot to commit gdcmFile::GetImageDataSizeRaw();
             that returns the pixel area size to the *aware* (vtk) user
             that DOESN'T want to turn the PALETTE COLOR image into an RGB image
     
2003-11-05 Benoit Regrain
     * in testSuite.py : Modify the rules for checking the paths